--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,10 @@ Author:
   Peter Solymos [aut, cre] (<https://orcid.org/0000-0001-7337-1740>), 
   Analythium Solutions Inc. [cph]
 Maintainer: Peter Solymos <peter@analythium.io>
-Description: Manage R configuration at the command line 
-  based on YML or JSON files and command line based overrides.
+Description: Manage R configuration using files (JSON, YAML, separated text)
+  JSON strings and command line arguments. Command line arguments
+  can be used to override configuration. Period-separated command line
+  flags are parsed as hierarchical lists.
 License: MIT + file LICENSE
 LazyLoad: yes
 Imports: yaml, jsonlite 
