--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,11 +1,4 @@
 template:
-  bootstrap: 5
-  bootswatch: cyborg
-  theme: arrow-dark
-  bslib:
-    base_font: {google: "Roboto"}
-    heading_font: {google: "Roboto Slab"}
-    code_font: {google: "JetBrains Mono"}
   includes:
     in_header: <script src="https://cdn.usefathom.com/script.js" data-site="XXTESXHY" defer></script>
 navbar:
@@ -16,3 +9,7 @@ navbar:
       icon: fa-twitter
       href: http://twitter.com/analythium
       aria-label: Twitter
+    github:
+      icon: fa-github
+      href: http://github.com/analythium
+      aria-label: GitHub
