Update too bootstrap 5

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,4 @@
 template:
+  bootstrap: 5
   includes:
     in_header: <script src="https://cdn.usefathom.com/script.js" data-site="XXTESXHY" defer></script>
