Up version before CRAN submission

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: rconfig
 Type: Package
 Title: Manage R Configuration at the Command Line
-Version: 0.0.1
+Version: 0.1.0
 Date: 2022-02-03
 Author: Peter Solymos [aut, cre]
         (<https://orcid.org/0000-0001-7337-1740>), Analythium Solutions
         Inc. [cph]
 Maintainer: Peter Solymos <peter@analythium.io>
-Description: Manage R configuration using files (JSON, YAML, separated text)
-  JSON strings and command line arguments. Command line arguments
+Description: Configuration management using files (JSON, YAML, separated text),
+  JSON strings, and command line arguments. Command line arguments
   can be used to override configuration. Period-separated command line
   flags are parsed as hierarchical lists.
 License: MIT + file LICENSE
