--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rconfig
 Type: Package
 Title: Manage R Configuration at the Command Line
-Version: 0.1.0
-Date: 2022-02-03
+Version: 0.1.1
+Date: 2022-02-18
 Author: Peter Solymos [aut, cre]
         (<https://orcid.org/0000-0001-7337-1740>), Analythium Solutions
         Inc. [cph]
@@ -17,3 +17,5 @@ Imports: yaml, jsonlite
 RoxygenNote: 7.1.1
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
+BugReports: https://github.com/analythium/rconfig/issues
+URL: https://github.com/analythium/rconfig
