--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,26 @@
+url: https://hub.analythium.io/rconfig
+
+home:
+  title: "rconfig: Manage R Configuration at the Command Line"
+  description: |
+    Configuration management using files (JSON, YAML, separated text),
+    JSON strings, and command line arguments.
+
 template:
   bootstrap: 5
   includes:
-    in_header: <script src="https://cdn.usefathom.com/script.js" data-site="XXTESXHY" defer></script>
+    in_header: |
+      <script src="https://cdn.usefathom.com/script.js" data-site="XXTESXHY" defer></script>
+      <link rel="icon" href="https://hub.analythium.io/assets/logo/grays/favicon.ico" />
+  opengraph:
+    image:
+      src: https://hub.analythium.io/assets/web/rconfig.png
+      alt: "rconfig: Manage R Configuration at the Command Line"
+    twitter:
+      creator: "@psolymos"
+      site: "@analythium"
+      card: summary_large_image
+
 navbar:
   structure:
     right: [search, twitter, github]
@@ -14,3 +33,4 @@ navbar:
       icon: fa-github
       href: http://github.com/analythium
       aria-label: GitHub
+
