--- a/inst/examples/rconfig-sub.yml
+++ b/inst/examples/rconfig-sub.yml
@@ -7,9 +7,10 @@ env:
   user:
     name: "${USER:?Define user name}"
     access: "${ACCESS?Define user access}"
-renv:
-  lang: "@{Lang:-EN}"
-  type: "@{Type?Type must be set}"
 conf:
   path: "#{env.url}/api/v1/"
   text: "User: #{env.user.name} (#{env.user.access})"
+  lang: "#{renv.lang}"
+renv:
+  lang: "@{Lang:-EN}"
+  type: "@{Type?Type must be set}"
