Implement substitution in rconfig() + docs
Signed-off-by: Peter Solymos <psolymos@gmail.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Authors@R: c(
 Description: Configuration management using files (JSON, YAML, separated text),
   JSON strings, and command line arguments. Command line arguments
   can be used to override configuration. Period-separated command line
-  flags are parsed as hierarchical lists.
+  flags are parsed as hierarchical lists. Environment variables, R global variables,
+  and configuration values can be substituted.
 License: MIT + file LICENSE
 LazyLoad: yes
 Imports: yaml, jsonlite
