--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(
     email = "peter@analythium.io"),
   person(given = "Analythium Solutions Inc.",
     role = c("cph", "fnd")))
-Description: Configuration management using files (JSON, YAML, separated text),
+Description: Configuration management using files (YAML, JSON, INI, TXT),
   JSON strings, and command line arguments. Command line arguments
   can be used to override configuration. Period-separated command line
   flags are parsed as hierarchical lists. Environment variables, R global variables,
