--- a/inst/examples/example.ini
+++ b/inst/examples/example.ini
@@ -41,7 +41,7 @@ empty string value here =
         # Did I mention we can indent comments, too?
 
 [R specific pieces]
-trials_chr = 5
-trials_num = !expr 5
+trials = 5
+pi = 3.14
 dataset = demo-data.csv
 cores = !expr getOption("mc.cores", 1L)
