--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,29 +7,37 @@ name: check
 
 jobs:
   deploy:
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      R_KEEP_PKG_SOURCE: yes
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Set up Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
 
       - name: R setup
-        uses: r-lib/actions/setup-r@v1
-
-      - name: Install sysreqs
-        run: brew install pandoc harfbuzz fribidi
+        uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
 
       - name: Install dependencies
-        run: |
-          Rscript -e 'install.packages(c("pkgdown", "devtools", "textshaping"))'
-          Rscript -e 'devtools::install_dev_deps()'
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rcmdcheck, any::pkgdown, local::.
+          needs: check, website
 
-      - name: Check package
-        run: |
-          Rscript -e 'devtools::document()'
-          Rscript -e 'devtools::check()'
+      - name: Check R package
+        uses: r-lib/actions/check-r-package@v2
 
       - name: Build site
         run: Rscript -e 'pkgdown::build_site_github_pages(install=TRUE)'
+
+      - name: Build site
+        run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
+        shell: Rscript {0}
 
       - name: Deploy site
         uses: JamesIves/github-pages-deploy-action@4.0.0
